feat: get questions of app endpoint
